@@ -1,3 +1,5 @@
+	* deprecate "send_stats" property on trackers (since lt_tracker extension has
+	  been removed)
 	* improve file layout optimization when creating torrents with padfiles
 	* remove remote_dl_rate feature
 	* source code migration from boost::shared_ptr to std::shared_ptr
